--- a/hasktorch/hasktorch.cabal
+++ b/hasktorch/hasktorch.cabal
@@ -8,8 +8,14 @@ author:              Austin Huang
 maintainer:          hasktorch@gmail.com
 copyright:           2019 Austin Huang
 category:            Codegen
-build-type:          Simple
-cabal-version:       >=1.10
+build-type:          Custom
+cabal-version:       1.24
+
+custom-setup
+  setup-depends:
+      base >= 4.9 && < 5
+    , Cabal
+    , cabal-doctest >=1.0.6 && <1.1
 
 Flag disable-doctest
  Description: Disable doctest. ToDo: This flag is to avoid relocation-error of ghci for macos.
@@ -61,6 +67,7 @@ library
                     , Torch.Serialize
                     , Torch.Random
                     , Torch.Script
+ other-modules:       Paths_hasktorch
  hs-source-dirs:      src
  default-language:    Haskell2010
  ghc-options:         -fplugin GHC.TypeLits.Normalise -fplugin GHC.TypeLits.KnownNat.Solver -fplugin GHC.TypeLits.Extra.Solver -fconstraint-solver-iterations=0
@@ -68,9 +75,6 @@ library
                     , base >= 4.7 && < 5
                     , libtorch-ffi == 1.5.*
                     , finite-typelits
-                    -- , ghc-typelits-extra >= 0.3.1
-                    -- , ghc-typelits-knownnat >= 0.7
-                    -- , ghc-typelits-natnormalise >= 0.7
                     , ghc-typelits-extra
                     , ghc-typelits-knownnat
                     , ghc-typelits-natnormalise
@@ -141,8 +145,26 @@ test-suite doctests
   type:               exitcode-stdio-1.0
   hs-source-dirs:     test
   main-is:            doctests.hs
-  ghc-options:        -Wall -threaded
+  ghc-options:        -Wall -threaded -fplugin GHC.TypeLits.Normalise -fplugin GHC.TypeLits.KnownNat.Solver -fplugin GHC.TypeLits.Extra.Solver -fconstraint-solver-iterations=0
   default-language:   Haskell2010
-  build-depends:      base >= 4.7 && < 5
-                    , doctest
-                    , libtorch-ffi
+  build-depends:      doctest >=0.16.0.1 && <0.17
+                    , async
+                    , base >= 4.7 && < 5
+                    , libtorch-ffi == 1.5.*
+                    , finite-typelits
+                    , ghc-typelits-extra
+                    , ghc-typelits-knownnat
+                    , ghc-typelits-natnormalise
+                    , mtl
+                    , safe-exceptions
+                    , random
+                    , reflection
+                    , singletons
+                    , stm
+                    , JuicyPixels
+                    , vector
+                    , bytestring
+                    , safe-exceptions
+                    , zlib >= 0.6
+                    , inline-c
+                    , hasktorch
