--- a/.github/workflows/nix-jupyterlab.yml
+++ b/.github/workflows/nix-jupyterlab.yml
@@ -18,13 +18,13 @@ jobs:
         docker rmi $(docker image ls -aq)
         df -h
     - uses: cachix/install-nix-action@v8
-    - uses: cachix/cachix-action@releases/v5
+    - uses: cachix/cachix-action@v6
       with:
         name: hasktorch
         signingKey: '${{ secrets.CACHIX_SIGNING_KEY }}'
         skipNixBuild: false
         file: experimental/jupyterlab/default.nix
-        nixBuildArgs: --option sandbox false 
+        nixBuildArgs: --option sandbox false
 #    - name: Build
 #      run: |
 #        nix-env -i cachix
