--- a/.github/workflows/nix-linux-cu10.yml
+++ b/.github/workflows/nix-linux-cu10.yml
@@ -14,9 +14,9 @@ jobs:
       - run: nix-env -iA cachix -f https://cachix.org/api/v1/install
       - run: cachix use iohk
       - run: |
-          nix-build shared.nix -A defaultCuda102.hsPkgs.libtorch-ffi.checks.spec
-          nix-build shared.nix -A defaultCuda102.hsPkgs.hasktorch.checks.spec
-          nix-build shared.nix -A defaultCuda102.hsPkgs.examples.checks.spec
+          nix-build --arg cudaSupport true --argstr cudaMajorVersion 10 -A haskellPackages.libtorch-ffi.checks.spec
+          nix-build --arg cudaSupport true --argstr cudaMajorVersion 10 -A haskellPackages.hasktorch.checks.spec
+          nix-build --arg cudaSupport true --argstr cudaMajorVersion 10 -A haskellPackages.examples.checks.spec
   build-cache:
     runs-on: ubuntu-latest
     steps:
